# hindsight-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  agents-instructions.md  server.json
.github/: copilot-instructions.md
.github/agents/: commit.agent.md  context.agent.md  implementation.agent.md  orchestrator.agent.md  runtime.agent.md  verification.agent.md
.github/skills/milestone-creator/: SKILL.md
.github/skills/milestone-creator/references/: full-example.md
.github/skills/rust-patterns/: SKILL.md
.github/skills/skill-creator/: SKILL.md
.github/skills/skill-creator/scripts/: init_skill.py
.github/workflows/: ci.yml  release.yml  release.yml.disabled
crates/hindsight-copilot/: Cargo.toml
crates/hindsight-copilot/benches/: copilot_bench.rs
crates/hindsight-copilot/fuzz/: Cargo.toml  README.md
crates/hindsight-copilot/fuzz/fuzz_targets/: fuzz_copilot_parser.rs  fuzz_lsp_trace.rs  fuzz_session_json.rs
crates/hindsight-copilot/src/: error.rs  lib.rs  lsp.rs  parser.rs  session.rs
crates/hindsight-copilot/tests/: integration_tests.rs
crates/hindsight-copilot/tests/fixtures/: chat-session-sample.json
crates/hindsight-git/: Cargo.toml
crates/hindsight-git/benches/: git_bench.rs
crates/hindsight-git/fuzz/: Cargo.toml  README.md
crates/hindsight-git/fuzz/fuzz_targets/: fuzz_git_parser.rs
crates/hindsight-git/src/: commit.rs  error.rs  lib.rs  parser.rs
crates/hindsight-git/tests/: integration_tests.rs
crates/hindsight-mcp/: Cargo.toml
crates/hindsight-mcp/benches/: mcp_bench.rs
crates/hindsight-mcp/fuzz/: Cargo.toml  README.md
crates/hindsight-mcp/fuzz/fuzz_targets/: fuzz_json_parsing.rs  fuzz_mcp_input.rs  fuzz_search_query.rs  fuzz_tool_input.rs
crates/hindsight-mcp/src/: config.rs  db.rs  handlers.rs  ingest.rs  lib.rs  main.rs  migrations.rs  queries.rs  schema.sql  server.rs
crates/hindsight-mcp/tests/: cli_combinations_tests.rs  cli_database_tests.rs  cli_logging_tests.rs  cli_skip_init_tests.rs  cli_workspace_tests.rs  dummy_failing_tests.rs  e2e_workflows.rs  fixtures.rs  ingest_tests.rs  integration_tests.rs  mcp_harness.rs  property_tests.rs  test_subcommand_tests.rs  test_utils.rs  tool_activity_summary_tests.rs  tool_commit_details_tests.rs  tool_failing_tests_tests.rs  tool_ingest_tests.rs  tool_search_tests.rs  tool_timeline_tests.rs
crates/hindsight-tests/: CONTRIBUTING.md  Cargo.toml
crates/hindsight-tests/benches/: tests_bench.rs
crates/hindsight-tests/fuzz/: Cargo.toml  README.md
crates/hindsight-tests/fuzz/fuzz_targets/: fuzz_nextest_list.rs  fuzz_nextest_run.rs  fuzz_streaming_parser.rs  fuzz_test_parser.rs
crates/hindsight-tests/src/: error.rs  lib.rs  nextest.rs  result.rs
crates/hindsight-tests/tests/: integration_tests.rs
crates/hindsight-tests/tests/fixtures/: nextest-sample.json
crates/hindsight-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package.json  tsconfig.json  webpack.config.js
crates/hindsight-vscode/src/: binaryManager.ts  config.ts  extension.ts  mcpProvider.ts
crates/hindsight-vscode/src/test/suite/: binaryManager.test.ts  extension.test.ts  index.ts
development/milestones/: 2026-01-17T02-33-06Z-data-exploration-and-schema-design.md  2026-01-17T03-23-27Z-data-ingestion-pipeline.md  2026-01-17T05-21-09Z-mcp-server-implementation.md  2026-01-17T23-53-04Z-readme-validation.md  2026-01-18T04-14-56Z-release-to-crates-io.md  2026-01-19T05-48-37Z-vscode-extension-marketplace.md
development/prompts/: 2026-01-17-01.md
