[package]
name = "hindsight-copilot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GitHub Copilot log processing for hindsight-mcp"

[lib]
name = "hindsight_copilot"
path = "src/lib.rs"

[[bench]]
name = "copilot_bench"
harness = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
lsp-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dirs.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
similar.workspace = true
similar-asserts.workspace = true
