[package]
name = "hindsight-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "MCP server bridging AI and development history"

[[bin]]
name = "hindsight-mcp"
path = "src/main.rs"

[[bench]]
name = "mcp_bench"
harness = false

[dependencies]
hindsight-git.workspace = true
hindsight-tests.workspace = true
hindsight-copilot.workspace = true

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
dirs.workspace = true
rust-mcp-sdk.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
similar.workspace = true
similar-asserts.workspace = true
