[package]
name = "hindsight-copilot-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hindsight-copilot = { path = ".." }

[[bin]]
name = "fuzz_copilot_parser"
path = "fuzz_targets/fuzz_copilot_parser.rs"
test = false
doc = false
bench = false
