[package]
name = "hindsight-copilot-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Prevent cargo from including this in the parent workspace
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
hindsight-copilot = { path = ".." }
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "fuzz_session_json"
path = "fuzz_targets/fuzz_session_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lsp_trace"
path = "fuzz_targets/fuzz_lsp_trace.rs"
test = false
doc = false
bench = false
