[package]
name = "hindsight-mcp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hindsight-mcp = { path = ".." }

[[bin]]
name = "fuzz_mcp_input"
path = "fuzz_targets/fuzz_mcp_input.rs"
test = false
doc = false
bench = false
