[package]
name = "hindsight-tests-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hindsight-tests = { path = ".." }

[[bin]]
name = "fuzz_test_parser"
path = "fuzz_targets/fuzz_test_parser.rs"
test = false
doc = false
bench = false
